[UPD] Put all the comics and fixed the wrap property

--- a/react-dc-comics/src/index.css
+++ b/react-dc-comics/src/index.css
@@ -18,14 +18,14 @@
 }
 
 .prod-card {
-  flex-basis: 16%;
-  padding: 50px;
+  flex-basis: 15%;
+  padding: 30px;
   background-color: black;
 }
 
 .prod-card img {
-  display: block;
   width: 100%;
+  height: auto;
 }
 
 /* Header */
@@ -122,7 +122,6 @@ h3 {
   color: grey;
   text-transform: none;
   gap: 10px;
-  position: relative;
 }
 
 .fourthList ul {
@@ -130,8 +129,6 @@ h3 {
   color: grey;
   text-transform: none;
   margin-left: 0px;
-  position: absolute;
-  bottom: 60px;
   line-height: 0;
 }
 
@@ -184,4 +181,8 @@ h2 {
 .icons img {
   width: 40px;
   height: auto;
+}
+
+.text-center {
+  text-align: center;
 }
